Pre 0.9.8 Release commit